--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
       <nav class="menu-item">
         <ul>
           <li>
-            <a href="#top">Portfolio</a>
+            <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="#top">About</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
@@ -92,10 +92,10 @@
     <nav class="menu-item">
       <ul>
         <li>
-          <a href="#top">Portfolio</a>
+          <a href="index.html">Portfolio</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="#top">About</a>
         </li>
         <li>
           <a href="#contact">Contact</a>
@@ -131,74 +131,43 @@
     <!-- sections start -->
     <div class="project-list">
 
-        <!-- nautiqua start -->
+        <!-- about start -->
         <section class="row-flex">
-          <div id="bg-nautiqua-case-study" class="three-fifth-width">
+          <div id="bg-me" class="one-quarter-width">
           </div>
-          <div class="two-fifth-width section-inner">
-            <h4 class="section-item">2024</h4>
-            <h3 class="section-item">Nautiqua</h3>
-            <hr>
-            <p class="section-item">A speculative campaign on promoting New Zealand aquaculture through a health product.</p>
-            <div class="section-item project-tags">
-              <div class="project-tag">Experience Design</div>
-              <div class="project-tag">UI Design</div>
-              <div class="project-tag">3D</div>
-            </div>
-            <div class="section-item">
-              <a href="nautiqua.html">
-                <button class="case-study-btn">view case study</button>
-              </a>
-            </div>
+          <div class="three-quarter-width section-inner">
+            <h4 class="section-item">Who am I?</h4>
+            <h3 class="section-item">Kind of obsessed with all things digital</h3>
+            <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys exploring what can be achieved in the ever-evolving world of tech. Each design project is a chance to learn and try something new in the digital space; this is something I will never grow tired of.</p>
+            <h3 class="section-item" style="margin-top:20px;">I thrive on immersion</h3>
+            <p class="section-item">Whether it’s getting myself lost in books and films, or indulging in my love for handmade craft, calligraphy, and ballpoint pen drawing; I love allowing myself to drown head-to-toe in these experiences. This all-encompassing immersion extends to my work in UX/UI, where I find myself approaching each project with fresh enthusiasm and a single-minded focus until the vision is brought to life.</p>
           </div>
         </section>
-        <!-- nautiqua finish -->
+        <!-- about finish -->
 
-        <!-- coral rescue start -->
-        <section class="row-flex">
-          <div id="bg-coral-rescue-case-study" class="three-fifth-width">
-          </div>
-          <div class="two-fifth-width section-inner">
-            <h4 class="section-item">2023</h4>
-            <h3 class="section-item">Coral Rescue</h3>
-            <hr>
-            <p class="section-item">An illustrated learning experience aiming to make a gloomy topic more comfortable and digestible.</p>
-            <div class="section-item project-tags">
-              <div class="project-tag">Web Design</div>
-              <div class="project-tag">Research</div>
-              <div class="project-tag">Illustration</div>
-            </div>
-            <div class="section-item">
-              <a href="#">
-                <button class="case-study-btn">view case study</button>
-              </a>
-            </div>
-          </div>
-        </section>
-        <!-- coral rescue finish -->
+        <!-- values start -->
+        <section class="">
 
-        <!-- pasc start -->
-        <section class="row-flex">
-          <div id="bg-pasc-case-study" class="three-fifth-width">
+          <div style="padding: 30px 30px 0;margin-bottom:-25px;">
+            <h4 class="section-item">As a designer, I am...</h4>
           </div>
-          <div class="two-fifth-width section-inner">
-            <h4 class="section-item">2023</h4>
-            <h3 class="section-item" style="letter-spacing:0;">Pan-Asian Screen Collective</h3>
-            <hr>
-            <p class="section-item">Using user research insights to better connect PASC to its community.</p>
-            <div class="section-item project-tags">
-              <div class="project-tag">Web Design</div>
-              <div class="project-tag">User Research</div>
-              <div class="project-tag">Branding</div>
+          <div class="row-flex section-inner">
+            <div class="one-third-width">
+              <h3 class="section-item">Empathetic</h3>
+              <p class="section-item">Every project starts with first understanding the users' experience. I aim to create solutions that not only serve the brief’s purpose, but satisfy user needs.</p>
             </div>
-            <div class="section-item">
-              <a href="#">
-                <button class="case-study-btn">view case study</button>
-              </a>
+            <div class="one-third-width">
+              <h3 class="section-item">Meticulous</h3>
+              <p class="section-item">I value the continuous pursuit of excellence. No detail is too small, and there is always room for improvement. I am dedicated to crafting works that serve as evidence of careful attention and consideration.</p>
+            </div>
+            <div class="one-third-width">
+              <h3 class="section-item">Mindful</h3>
+              <p class="section-item">While the end results are important, I recognise that the journey is equally significant. I approach my practice mindfully, savouring each moment of the process to create an enriching journey for myself and those involved.</p>
             </div>
           </div>
+
         </section>
-        <!-- pasc finish -->
+        <!-- values finish -->
 
     </div>
     <!-- sections finish -->
