--- a/nautiqua.html
+++ b/nautiqua.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/case-study.css">
 
   <meta name="view-transition" content="same-origin">
 
@@ -38,7 +39,7 @@
 
       <div class="menu-item">
         <h1>nara</h1>
-        <p class="bigger-body blurb">Kia ora, I’m Nara. I care about crafting comfortable and purpose-driven design experiences.</p>
+        <p class="blurb">Kia ora, I’m Nara. I care about crafting comfortable and purpose-driven design experiences.</p>
       </div>
 
 
@@ -48,7 +49,7 @@
             <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="">About</a>
+            <a href="about.html">About</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
@@ -86,7 +87,7 @@
 
     <div class="menu-item">
       <h1>nara</h1>
-      <p class="bigger-body blurb">Kia ora, I’m Nara. I care about crafting comfortable and purpose-driven design experiences.</p>
+      <p class="blurb">Kia ora, I’m Nara. I care about crafting comfortable and purpose-driven design experiences.</p>
     </div>
     
     <nav class="menu-item">
@@ -95,7 +96,7 @@
           <a href="index.html">Portfolio</a>
         </li>
         <li>
-          <a href="">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="#contact">Contact</a>
@@ -132,6 +133,87 @@
     </a>
     <!-- DONT DELETE THESE FINISH -->
 
+
+    <!-- CASE STUDY START -->
+    <div id="nautiqua-case-study" class="bigger-body case-study">
+
+      <!-- first section start -->
+      <div class="row-flex">
+
+        <!-- left start -->
+        <div class="two-fifth-width finicky-bit">
+
+          <div class="thick-padding">
+            <h3 class="thin-padding">Nautiqua</h3>
+            <h1 class="thin-padding">Eco-luxury through aquaculture</h1>
+          </div>
+
+          <!-- roles start -->
+          <div class="full-width thick-padding-side">
+            <p class="thin-padding"><b>My Roles</b></p>
+            <div class="project-tags thin-padding">
+              <div class="project-tag">Experience Design</div>
+              <div class="project-tag">Creative Direction</div>
+              <div class="project-tag">UI Design</div>
+              <div class="project-tag">3D Visualisation</div>
+              <div class="project-tag">Research</div>
+            </div>
+          </div>
+          <!-- roles finish -->
+
+          <!-- tools start -->
+          <div class="full-width thick-padding-side">
+            <p class="thin-padding"><b>Tools</b></p>
+          </div>
+          <!-- tools finish -->
+
+          <!-- duration start -->
+          <div class="full-width thick-padding-side">
+            <p class="thin-padding"><b>Duration</b></p>
+          </div>
+          <!-- duration finish -->
+
+          <!-- team start -->
+          <div class="full-width thick-padding-side">
+            <p class="thin-padding"><b>Team Members</b></p>
+          </div>
+          <!-- team finish -->
+
+        </div>
+        <!-- left finish -->
+
+        <!-- right start -->
+        <div class="three-fifth-width">
+
+          <img class="full-width" src="images/nautiqua-logo.jpg" alt="nautiqua logo">
+
+          <img class="full-width" src="images/nautiqua-thumbnail.jpg" alt="">
+
+        </div>
+        <!-- right finish -->
+
+      </div>
+      <!-- first section finish -->
+
+      <!-- intro start -->
+      <div class="row-flex">
+
+        <div class="one-third-width thick-padding">
+          <h5 class="thin-padding">Introduction</h5>
+          <h6 class="thin-padding">It's underwater<br>farming, basically</h6>
+        </div>
+
+        <div class="two-third-width thick-padding">
+          <p class="thin-padding">We were tasked with proposing a speculative campaign that attracts both public and investors’ attention to the benefits of aquaculture from New Zealand. There was a critical error we discovered in NZ’s existing aquaculture strategy: it is heavily domestically focused and overseas exports have not been growing over the years, despite the goals to reach global recognition and become a $3 billion industry by 2035.</p>
+          <p class="citation thin-padding">(Department of Aquaculture, 2019 & 2022) & (Ministry for Primary Industries, 2023).</p>
+          <p class="thin-padding">So we asked ourselves, <b>how might we demonstrate the health and environmental benefits of NZ aquaculture to an overseas audience?</b></p>
+        </div>
+
+      </div>
+      <!-- intro finish -->
+
+    </div>
+    <!-- CASE STUDY FINISH -->
 
 
     <!-- footer start -->
