--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,10 @@
             <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="#top">About</a>
+            <a href="about.html">About</a>
           </li>
           <li>
-            <a href="#contact">Contact</a>
+            <a href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
@@ -95,7 +95,7 @@
           <a href="index.html">Portfolio</a>
         </li>
         <li>
-          <a href="#top">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
@@ -128,71 +128,29 @@
     </a>
     <!-- DONT DELETE THESE FINISH -->
 
-    <!-- sections start -->
-    <div class="project-list">
+    <div class="contact-page">
 
-        <!-- about start -->
-        <section class="row-flex">
-          <div id="bg-me" class="one-quarter-width">
-          </div>
-          <div class="three-quarter-width section-inner">
-            <h4 class="section-item">Who am I?</h4>
-            <h3 class="section-item">Kind of obsessed with all things digital</h3>
-            <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys exploring what can be achieved in the ever-evolving world of tech. Each design project is a chance to learn and try something new in the digital space; this is something I will never grow tired of.</p>
-            <h3 class="section-item" style="margin-top:20px;">I thrive on immersion</h3>
-            <p class="section-item">Whether it’s getting myself lost in books and films, or indulging in my love for handmade craft, calligraphy, and ballpoint pen drawing; I love allowing myself to drown head-to-toe in these experiences. This all-encompassing immersion extends to my work in UX/UI, where I find myself approaching each project with fresh enthusiasm and a single-minded focus until the vision is brought to life.</p>
-          </div>
-        </section>
-        <!-- about finish -->
-
-        <!-- values start -->
-        <section class="">
-
-          <div style="padding: 30px 30px 0;margin-bottom:-25px;">
-            <h4 class="section-item">As a designer, I am...</h4>
-          </div>
-          <div class="row-flex section-inner">
-            <div class="one-third-width">
-              <h3 class="section-item">Empathetic</h3>
-              <p class="section-item">Every project starts with first understanding the users' perspective and experience. I aim to create solutions that not only serve the brief’s purpose, but satisfy user needs.</p>
-            </div>
-            <div class="one-third-width">
-              <h3 class="section-item">Meticulous</h3>
-              <p class="section-item">I value the continuous pursuit of excellence. No detail is too small, and there is always room for improvement. I am dedicated to crafting works that serve as evidence of careful attention and consideration.</p>
-            </div>
-            <div class="one-third-width">
-              <h3 class="section-item">Mindful</h3>
-              <p class="section-item">While the end results are important, I recognise that the process is equally valuable. I approach my practice mindfully to create an enriching journey for myself and those involved.</p>
-            </div>
-          </div>
-
-        </section>
-        <!-- values finish -->
+      <h2>Drop me a line</h2>
+      <p>+64 22 126 8697</p>
+      <p>wonara.nz@gmail.com</p>
+      <div class="social-icons">
+        <a style="color:#292929;" href="https://www.instagram.com/nara_won" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a style="color:#292929;" href="https://www.linkedin.com/in/nara-w" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
 
     </div>
-    <!-- sections finish -->
 
     <!-- footer start -->
     <footer id="contact" class="white-text">
 
-      <h2>Drop me a line</h2>
-      <div class="footer-flex">
-        <p>+64 22 126 8697</p>
-        <p>wonara.nz@gmail.com</p>
-        <div class="social-icons">
-          <a href="https://www.instagram.com/nara_won" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/nara-w" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-        </div>
-        <div style="width:50px;">&nbsp;</div>
-      </div>
-
       <div class="copyright">
         <p>&copy; 2024 Nara Won</p>
       </div>
+  
 
     </footer>
     <!-- footer finish -->
