--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <a href="about.html">About</a>
         </li>
         <li>
-          <a href="#contact">Contact</a>
+          <a href="contact.html">Contact</a>
         </li>
       </ul>
     </nav>
