--- a/nautiqua.html
+++ b/nautiqua.html
@@ -232,7 +232,7 @@
       <!-- intro finish -->
 
       <!-- location start -->
-      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-bg.jpg);background-size:cover;background-attachment:fixed;">
+      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-bg.jpg);background-color:#2C5E4F;background-size:cover;background-attachment:fixed;">
 
         <div class="two-fifth-width mid-padding">
           <h5 class="thin-padding">Target Location</h5>
