--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <nav class="menu-item">
       <ul>
         <li>
-          <a href="#top">Portfolio</a>
+          <a href="index.html">Portfolio</a>
         </li>
         <li>
           <a href="about.html">About</a>
