--- a/nautiqua.html
+++ b/nautiqua.html
@@ -202,7 +202,7 @@
         <!-- left side finish -->
 
         <!-- right side start -->
-        <div class="three-fifth-width">
+        <div class="three-fifth-width mid-padding">
 
           <div class="img-wrapper">
             <div style="background-image:url(images/nautiqua-logo.jpg)" class="img"></div>
@@ -236,7 +236,7 @@
 
         <div class="two-fifth-width mid-padding">
           <h5 class="thin-padding">Target Location</h5>
-          <h6 class="thin-padding">Overseas,<br>but where?</h6>
+          <h6 class="thin-padding">Overseas, but where?</h6>
         </div>
 
         <div class="three-fifth-width mid-padding">
@@ -319,12 +319,12 @@
       <!-- audience finish -->
 
       <!-- product start -->
-      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-thumbnail.jpg);background-size:cover;background-position:center;background-attachment:fixed;height:800px;">
+      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-thumbnail.jpg);background-size:cover;background-size:cover;background-position:center;background-attachment:fixed;height:100vh">
       </div>
       <!-- product finish -->
 
       <!-- productblurb start -->
-      <div class="row-flex full-width thick-top">
+      <div class="row-flex full-width mid-top">
         <div class="two-fifth-width thick-padding">
           <h5 class="thin-padding">The Solution</h5>
           <h6 class="thin-padding">Where aquaculture meets health & luxury</h6>
@@ -333,7 +333,7 @@
           </p>
           <p class="thin-padding citation">*Charis supplied the packaging designs; it was my job to bring them to life in 3D.</p>
         </div>
-        <div class="three-fifth-width">
+        <div class="three-fifth-width mid-padding">
           <div class="img-wrapper">
             <div style="background-image:url(images/seaweed.jpg)" class="img"></div>
           </div>
@@ -358,14 +358,41 @@
       <!-- promoblurb finish -->
 
       <!-- displays start -->
-      <div class="row-flex">
+      <div class="row-flex mid-padding">
 
         <div class="img-wrapper three-fifth-width">
           <div class="img " style="background-image:url(images/invitation-display.jpg);background-size:102%;"></div>
         </div>
+        <div class="img-wrapper two-fifth-width">
+          <div class="img " style="background-image:url(images/kiosk.jpg);background-size:101%;"></div>
+        </div>
 
       </div>
+
+      <div class="full-width" style="padding:0 55px;">
+        <p class="citation thin-padding">*Kiosk design & invitation dispenser design supplied by Joshua.<br>
+        *3D mockups were created by me, with some use of 3D assets from emcderm (2022), Laret (2019), MarMel (2024), and RISD (2021).</p>
+      </div>
       <!-- displays finish -->
+
+      <!-- installation start -->
+      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-installation.jpg);background-size:cover;background-size:cover;background-position:center;background-attachment:fixed;height:100vh">
+      </div>
+      <!-- installation finish -->
+
+      <!-- installationblurb start -->
+      <div class="two-third-width thick-padding" style="margin: 0 auto;">
+        <p class="bigger-body thin-padding">
+          These glorious glass displays each feature one of the two core ingredients of the product. Next to these are interactive screens which take users through the ingredient source location, its environmental and health benefits, as well as the sustainable practices of Nautiqua. This experience is designed to build trust between Nautiqua’s consumers and products.
+        </p>
+      </div>
+      <!-- installationblurb finish -->
+
+      <video class="full-width" src="videos/installation-screen.mp4" autoplay loop></video>
+
+      <!-- references start -->
+      <div class="full-width row-flex thick-padding">references! do this next!!</div>
+      <!-- references finish -->
 
     </div>
     <!-- CASE STUDY FINISH -->
