--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
           <a href="index.html">Portfolio</a>
         </li>
         <li>
-          <a href="#top">About</a>
+          <a href="about.html">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
