--- a/nautiqua.html
+++ b/nautiqua.html
@@ -205,10 +205,10 @@
         <div class="three-fifth-width mid-padding">
 
           <div class="img-wrapper">
-            <div style="background-image:url(images/nautiqua-logo.jpg)" class="img"></div>
+            <img class="full-width rounded-img" src="images/nautiqua-logo.jpg" alt="">
           </div>
           <div class="img-wrapper">
-            <div style="background-image:url(images/nautiqua-thumbnail.jpg)" class="img"></div>
+            <img class="full-width rounded-img" src="images/nautiqua-thumbnail.jpg" alt="">
           </div>
 
         </div>
@@ -232,7 +232,7 @@
       <!-- intro finish -->
 
       <!-- location start -->
-      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-bg.jpg);background-color:#2C5E4F;background-size:cover;background-attachment:fixed;">
+      <div id="nautiqua-stats" class="mid-top row-flex white-text full-width mid-padding">
 
         <div class="two-fifth-width mid-padding">
           <h5 class="thin-padding">Target Location</h5>
@@ -319,7 +319,7 @@
       <!-- audience finish -->
 
       <!-- product start -->
-      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-thumbnail.jpg);background-size:cover;background-size:cover;background-position:center;background-attachment:fixed;height:100vh">
+      <div id="nautiqua-product" class="mid-top row-flex white-text full-width mid-padding">
       </div>
       <!-- product finish -->
 
@@ -335,10 +335,10 @@
         </div>
         <div class="three-fifth-width mid-padding">
           <div class="img-wrapper">
-            <div style="background-image:url(images/seaweed.jpg)" class="img"></div>
+            <img class="full-width rounded-img" src="images/seaweed.jpg" alt="">
           </div>
           <div class="img-wrapper">
-            <div style="background-image:url(images/blue-bayou.jpg)" class="img"></div>
+            <img class="full-width rounded-img" src="images/blue-bayou.jpg" alt="">
           </div>
         </div>
       </div>
@@ -361,10 +361,10 @@
       <div class="row-flex mid-padding">
 
         <div class="img-wrapper three-fifth-width">
-          <div class="img " style="background-image:url(images/invitation-display.jpg);background-size:102%;"></div>
+          <img class="full-width rounded-img" src="images/invitation-display.jpg" alt="">
         </div>
         <div class="img-wrapper two-fifth-width">
-          <div class="img " style="background-image:url(images/kiosk.jpg);background-size:101%;"></div>
+          <img class="full-width rounded-img" src="images/kiosk.jpg" alt="">
         </div>
 
       </div>
@@ -376,14 +376,14 @@
       <!-- displays finish -->
 
       <!-- installation start -->
-      <div class="mid-top row-flex white-text full-width mid-padding" style="background-image: url(images/nautiqua-installation.jpg);background-size:cover;background-size:cover;background-position:center;background-attachment:fixed;height:100vh">
+      <div id="nautiqua-installation" class="mid-top row-flex white-text full-width mid-padding">
       </div>
       <!-- installation finish -->
 
       <!-- installationblurb start -->
       <div class="two-third-width thick-padding" style="margin: 0 auto;">
         <p class="bigger-body thin-padding">
-          These glorious glass displays each feature one of the two core ingredients of the product. Next to these are interactive screens which take users through the ingredient source location, its environmental and health benefits, as well as the sustainable practices of Nautiqua. This experience is designed to build trust between Nautiqua’s consumers and products.
+          These glass displays each feature one of the two core ingredients of the product. Next to these are interactive screens which take users through the ingredient source location, its environmental and health benefits, as well as the sustainable practices of Nautiqua. This experience is designed to build trust between Nautiqua’s consumers and products.
         </p>
       </div>
       <!-- installationblurb finish -->
@@ -391,8 +391,48 @@
       <video class="full-width" src="videos/installation-screen.mp4" autoplay loop></video>
 
       <!-- references start -->
-      <div class="full-width row-flex thick-padding">references! do this next!!</div>
+      <div class="full-width row-flex thick-padding">
+        <div class="one-quarter-width thin-padding">
+          <h3>References</h3>
+        </div>
+        <div class="three-quarter-width citation">
+          <p class="thin-padding">Department of Agriculture. (2019). <i>National Aquaculture Strategy</i>. <a href="https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/aquaculture-strategy-for-new-zealand/" target="_blank">https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/aquaculture-strategy-for-new-zealand/</a></p>
+          <p class="thin-padding">Department of Agriculture. (2022). <i>Aquaculture Strategy: 2022 implementation plan</i>. <a href="https://www.mpi.govt.nz/dmsdocument/50570-2022-Aquaculture-implementation-plan" target="_blank">https://www.mpi.govt.nz/dmsdocument/50570-2022-Aquaculture-implementation-plan</a></p>
+          <p class="thin-padding">Dyer, D., Pearson, L., Lapeyre, M., & Gaston, R. (2020). <i> International consumer survey: Impact of Covid-19 on positioning of New Zealand brands</i>. New Zealand Trade & Enterprise. <a href="https://assets.ctfassets.net/pn8wbiqtnzw9/b7tskZcLQO1IfT1y02ahl/9fe38a8f2e90bf81b05657668ba49150/NZTE_COVID-19_International_Topline_wave_1.pdf" target="_blank">https://assets.ctfassets.net/pn8wbiqtnzw9/b7tskZcLQO1IfT1y02ahl/9fe38a8f2e90bf81b05657668ba49150/NZTE_COVID-19_International_Topline_wave_1.pdf</a></p>
+          <p class="thin-padding">emcderm. (2022). <i>Buoy and Seaweed Scan</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/ozNXJ" target="_blank">https://skfb.ly/ozNXJ</a></p>
+          <p class="thin-padding">Laret, B. (2019). <i>Claret Wiggle Seaweed</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/6Xp7q" target="_blank">https://skfb.ly/6Xp7q</a></p>
+          <p class="thin-padding">MarMel-Bali. (2024). <i>Modern House & Guesthouse - 2 Bedroom</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/oPYLv" target="_blank">https://skfb.ly/oPYLv</a></p>
+          <p class="thin-padding">Ministry for Primary Industries. (2023). <i>Amount of aquaculture exported from New Zealand</i>. <a href="https://figure.nz/chart/HptqJSFMhxoTV1C4-BOMdUVZx0J0sEdjP" target="_blank">https://figure.nz/chart/HptqJSFMhxoTV1C4-BOMdUVZx0J0sEdjP</a></p>
+          <p class="thin-padding">Ministry for Primary Industries. (2023). <i>Value of aquaculture exported from New Zealand</i>. <a href="https://figure.nz/chart/jPhn59ZSuhXHZh7v-t8qkRpOnOO0N0Ofo" target="_blank">https://figure.nz/chart/jPhn59ZSuhXHZh7v-t8qkRpOnOO0N0Ofo</a></p>
+          <p class="thin-padding">Ministry for Primary Industries. (2023). <i>Sustainable aquaculture | NZ Government</i>. <a href="https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/sustainable-aquaculture/" target="_blank">https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/sustainable-aquaculture/</a></p>
+          <p class="thin-padding">Ministry for Primary Industries. (2024). <i>Aquaculture (fish and shellfish farming) | NZ Government</i>. <a href="https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/" target="_blank">https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/</a></p>
+
+          <p class="thin-padding">RISD Nature Lab. (2021). <i>Mussel Shell (polished)</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/onHOD" target="_blank">https://skfb.ly/onHOD</a></p>
+
+        </div>
+      </div>
       <!-- references finish -->
+
+      <!-- youmayalsolike start -->
+      <div class="full-width thick-padding extra-content">
+        <h2 class="thin-padding">You may also like...</h2>
+        <div class="full-width row-flex">
+
+          <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="coral-rescue.html">
+              <img class="full-width" src="images/coral-rescue-thumbnail.png" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="pasc.html">
+              <img class="full-width" src="images/pasc-thumbnail.png" alt="">
+            </a>
+          </div>
+          <div class="half-width thin-padding">&nbsp;</div>
+
+        </div>
+      </div>
+      <!-- youmayalsolike finish -->
 
     </div>
     <!-- CASE STUDY FINISH -->
