--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nara's Portfolio</title>
 
+  <link rel="icon" type="image/ico" href="images/favicon-white/favicon.ico">
+
   <script src="js/menu.js" defer></script>
   <script src="js/main.js" defer></script>
 
@@ -14,7 +16,7 @@
 
   <meta name="view-transition" content="same-origin">
 
-  <script src="https://kit.fontawesome.com/bc961035cb.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/bc961035cb.js" crossorigin="anonymous"></script>  
 
   <!-- federo typeface -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -169,7 +171,7 @@
               <div class="project-tag">Illustration</div>
             </div>
             <div class="section-item">
-              <a href="#">
+              <a href="coral-rescue.html">
                 <button class="case-study-btn">view case study</button>
               </a>
             </div>
