--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nara's Portfolio</title>
 
+  <link rel="icon" type="image/ico" href="images/favicon-white/favicon.ico">
+
   <script src="js/menu.js" defer></script>
   <script src="js/main.js" defer></script>
 
