--- a/nautiqua.html
+++ b/nautiqua.html
@@ -207,7 +207,7 @@
         <div class="three-fifth-width mid-padding">
 
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/nautiqua-logo.jpg" alt="">
+            <img class="full-width rounded-img" src="images/n-1.png" alt="">
           </div>
           <div class="img-wrapper">
             <img class="full-width rounded-img" src="images/nautiqua-thumbnail.jpg" alt="">
@@ -337,10 +337,10 @@
         </div>
         <div class="three-fifth-width mid-padding">
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/seaweed.jpg" alt="">
+            <img class="full-width rounded-img" src="images/n-2.png" alt="">
           </div>
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/blue-bayou.jpg" alt="">
+            <img class="full-width rounded-img" src="images/n-3.jpg" alt="">
           </div>
         </div>
       </div>
@@ -363,10 +363,10 @@
       <div class="row-flex mid-padding">
 
         <div class="img-wrapper three-fifth-width">
-          <img class="full-width rounded-img" src="images/invitation-display.jpg" alt="">
+          <img class="full-width rounded-img" src="images/n-4.png" alt="">
         </div>
         <div class="img-wrapper two-fifth-width">
-          <img class="full-width rounded-img" src="images/kiosk.jpg" alt="">
+          <img class="full-width rounded-img" src="images/n-5.png" alt="">
         </div>
 
       </div>
@@ -422,7 +422,7 @@
 
           <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="coral-rescue.html">
-              <img class="full-width" src="images/coral-rescue-thumbnail.png" alt="">
+              <img class="full-width" src="images/coral-rescue/coral-rescue-thumbnail.png" alt="">
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
