--- a/coral-rescue.html
+++ b/coral-rescue.html
@@ -167,7 +167,7 @@
             <div class="project-tags thin-padding">
               <div class="project-tag"><i class="fa-brands fa-figma"></i> Figma</div>
               <div class="project-tag">
-                <img class="tool-icon" src="images/photoshop-icon-coral-rescue.svg" alt=""> Photoshop
+                <img class="tool-icon" src="images/coral-rescue/photoshop-icon-coral-rescue.svg" alt=""> Photoshop
               </div>
             </div>
           </div>
@@ -187,10 +187,10 @@
         <div class="three-fifth-width mid-padding">
 
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/nautiqua-logo.jpg" alt="">
+            <img class="full-width rounded-img" src="images/coral-rescue/cr-1.svg" alt="">
           </div>
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/nautiqua-thumbnail.jpg" alt="">
+            <img class="full-width rounded-img" src="images/coral-rescue/cr-2.png" alt="">
           </div>
 
         </div>
@@ -201,17 +201,140 @@
 
       <!-- intro start -->
       <div class="row-flex full-width mid-padding">
-        <div class="two-fifth-width mid-padding">
+        <div class="one-third-width mid-padding">
           <h5 class="thin-padding">Introduction</h5>
-          <h6 class="thin-padding">It's underwater<br>farming, basically</h6>
+          <h6 class="thin-padding">The rainforests of the sea need our help</h6>
         </div>
-        <div class="three-fifth-width mid-padding bigger-body">
-          <p class="thin-padding">We were tasked with proposing a speculative campaign that attracts both public and investors’ attention to the benefits of aquaculture from New Zealand. There was a critical error we discovered in NZ’s existing aquaculture strategy: it is heavily domestically focused and overseas exports have not been growing over the years, despite the goals to reach global recognition and become a $3 billion industry by 2035.</p>
-          <p class="citation thin-padding">(Department of Aquaculture, 2019 & 2022) & (Ministry for Primary Industries, 2023).</p>
-          <p class="thin-padding">So we asked ourselves, <b>how might we demonstrate the health and environmental benefits of NZ aquaculture to an overseas audience?</b></p>
+        <div class="two-third-width mid-padding bigger-body">
+          <p class="thin-padding">Coral reefs are vital, vibrant underwater ecosystems which are facing continuous deterioration due to human interference. In recognising the complex and often gloomy nature of the subject, <b>the goal of Coral Rescue was to create an educational resource that is both comfortable and comprehensible</b> in order to foster understanding towards this pressing issue.</p>
         </div>
       </div>
       <!-- intro finish -->
+
+      <video class="full-width" src="videos/cr-v-1.mkv" autoplay loop></video>
+
+      <!-- images start -->
+      <div class="full-width row-flex mid-padding">
+        <div class="img-wrapper three-fifth-width">
+          <img class="full-width rounded-img" src="images/coral-rescue/cr-3.png" alt="">
+        </div>
+        <div class="img-wrapper two-fifth-width">
+          <img class="full-width rounded-img" src="images/coral-rescue/cr-4.png" alt="">
+        </div>
+      </div>
+      <!-- images finish -->
+
+      <!-- method start -->
+      <div class="row-flex full-width mid-padding">
+        <div class="one-third-width mid-padding">
+          <h5 class="thin-padding">Method</h5>
+          <h6 class="thin-padding">Illustrated for understanding & emotional comfort</h6>
+        </div>
+        <div class="two-third-width mid-padding bigger-body">
+          <p class="thin-padding">Kozak (2020) tested and verified three hypotheses: that illustration triggers memories and makes content more memorable; illustration elicits emotions and makes experiences more pleasurable; and illustration accelerates perception of content.</p>
+          <p class="thin-padding">Additionally, when photos and artworks were compared for emotional responses, the number of pleasant emotions triggered by artworks increased compared to those triggered by photographs of the same subject, while unpleasant emotions decreased in the same way (Yang et al, 2019). For these reasons, illustration was deemed a suitable medium for making the intricacies of coral decline more accessible and emotionally comfortable for a wider audience.</p>
+        </div>
+      </div>
+      <!-- method finish -->
+
+      <!-- sketches start -->
+      <div class="full-width mid-top">
+        <img class="full-width" src="images/coral-rescue/cr-5.png" alt="">
+      </div>
+      <!-- sketches finish -->
+
+      <!-- colour start -->
+      <div class="row-flex full-width mid-top">
+        <div class="two-fifth-width thick-padding">
+          <h5 class="thin-padding">Colour</h5>
+          <h6 class="thin-padding">Painted according to comfort & comprehensibility</h6>
+          <p class="thin-padding bigger-body">
+            The reality of our planet’s deterioration can be a daunting topic. With that in mind, the colour palette was crafted to make the information approachable and easy to digest. Blue takes centre stage to provide a calm, stable backdrop. The pink accents serve to draw the eye and infuse additional warmth into the scenes.
+          </p>
+        </div>
+        <div class="three-fifth-width mid-padding">
+          <div class="full-width img-wrapper">
+            <img class="full-width rounded-img" src="images/coral-rescue/cr-palette.svg" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- colour finish finish -->
+
+      <!-- colour scenes start -->
+      <div class="full-width row-flex mid-padding">
+        <div class="half-width img-wrapper">
+          <video class="full-width rounded-img thick-top" src="videos/cr-v-2.mp4" loop autoplay></video>
+          <p class="mid-padding bigger-body">Desaturation of colour was utilised to communicate the negative consequences of coral reef decline.</p>
+        </div>
+        <div class="half-width">
+          <div class="full-width img-wrapper">
+            <img class="full-width rounded-img" src="images/coral-rescue/cr-6.svg" alt="">
+          </div>
+          <div class="full-width img-wrapper">
+            <img class="full-width small-top rounded-img" src="images/coral-rescue/cr-7.svg" alt="">
+          </div>
+        </div>
+      </div>
+      <!-- colour scenes finish -->
+
+      <!-- format start -->
+      <div class="row-flex full-width mid-padding">
+        <div class="one-third-width mid-padding">
+          <h5 class="thin-padding">Format</h5>
+          <h6 class="thin-padding">Tailoring to user behaviour & needs</h6>
+        </div>
+        <div class="two-third-width mid-padding bigger-body">
+          <p class="thin-padding">Explainable and promotive illustrations outperform decorational illustrations (Luo & Lin, 2017); in other words, <b>illustrations in a learning context cannot be used in isolation—another form of communication is necessary to explain them.</b></p>
+          <p class="thin-padding">Guided by this information, I explored different formats which support the combination of illustrations paired with written communication. The website format emerged as the most effective, as it limited the scope of vision, which prevented overwhelming the user, and provided interactivity, which maintained attention. Additionally, this was the most preferred format among users due to its convenience.</p>
+          <p class="thin-padding">The website was then refined through the incorporation of motion and interactivity to make better use of the medium and create a cohesive final product.</p>
+        </div>
+      </div>
+      <!-- format finish -->
+
+      <!-- rows start -->
+      <div class="full-width mid-padding">
+
+        <!-- row1 start -->
+        <div class="full-width row-flex">
+          <div class="half-width img-wrapper">
+            <img class="full-width rounded-img" src="images/coral-rescue/cr-8.svg" alt="">
+          </div>
+          <div class="half-width img-wrapper">
+            <video class="full-width rounded-img" src="videos/cr-v-3.mp4" loop autoplay></video>
+          </div>
+        </div>
+        <!-- row1 finish -->
+
+        <!-- row2 start -->
+        <div class="full-width row-flex small-top">
+          <div class="img-wrapper three-fifth-width">
+            <video class="full-width rounded-img" src="videos/cr-v-4.mp4" loop autoplay></video>
+          </div>
+          <div class="img-wrapper two-fifth-width">
+            <img class="full-width rounded-img" src="images/coral-rescue/cr-9.svg" alt="">
+          </div>
+        </div>
+        <!-- row2 finish -->
+
+        <!-- row3 start -->
+        <div class="full-width row-flex small-top">
+          <div class="half-width img-wrapper">
+            <video class="full-width rounded-img" src="videos/cr-v-5.mp4" loop autoplay></video>
+          </div>
+          <div class="half-width img-wrapper">
+            <video class="full-width rounded-img" src="videos/cr-v-6.mp4" loop autoplay></video>
+          </div>
+        </div>
+        <!-- row3 finish -->
+
+      </div>
+      <!-- rows finish -->
+
+      <!-- final start -->
+      <div class="full-width thick-top">
+        <img class="full-width" src="images/coral-rescue/coral-rescue-thumbnail.png" alt="">
+      </div>
+      <!-- final finish -->
 
       <!-- references start -->
       <div class="full-width row-flex thick-padding">
@@ -219,18 +342,9 @@
           <h3>References</h3>
         </div>
         <div class="three-quarter-width citation">
-          <p class="thin-padding">Department of Agriculture. (2019). <i>National Aquaculture Strategy</i>. <a href="https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/aquaculture-strategy-for-new-zealand/" target="_blank">https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/aquaculture-strategy-for-new-zealand/</a></p>
-          <p class="thin-padding">Department of Agriculture. (2022). <i>Aquaculture Strategy: 2022 implementation plan</i>. <a href="https://www.mpi.govt.nz/dmsdocument/50570-2022-Aquaculture-implementation-plan" target="_blank">https://www.mpi.govt.nz/dmsdocument/50570-2022-Aquaculture-implementation-plan</a></p>
-          <p class="thin-padding">Dyer, D., Pearson, L., Lapeyre, M., & Gaston, R. (2020). <i> International consumer survey: Impact of Covid-19 on positioning of New Zealand brands</i>. New Zealand Trade & Enterprise. <a href="https://assets.ctfassets.net/pn8wbiqtnzw9/b7tskZcLQO1IfT1y02ahl/9fe38a8f2e90bf81b05657668ba49150/NZTE_COVID-19_International_Topline_wave_1.pdf" target="_blank">https://assets.ctfassets.net/pn8wbiqtnzw9/b7tskZcLQO1IfT1y02ahl/9fe38a8f2e90bf81b05657668ba49150/NZTE_COVID-19_International_Topline_wave_1.pdf</a></p>
-          <p class="thin-padding">emcderm. (2022). <i>Buoy and Seaweed Scan</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/ozNXJ" target="_blank">https://skfb.ly/ozNXJ</a></p>
-          <p class="thin-padding">Laret, B. (2019). <i>Claret Wiggle Seaweed</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/6Xp7q" target="_blank">https://skfb.ly/6Xp7q</a></p>
-          <p class="thin-padding">MarMel-Bali. (2024). <i>Modern House & Guesthouse - 2 Bedroom</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/oPYLv" target="_blank">https://skfb.ly/oPYLv</a></p>
-          <p class="thin-padding">Ministry for Primary Industries. (2023). <i>Amount of aquaculture exported from New Zealand</i>. <a href="https://figure.nz/chart/HptqJSFMhxoTV1C4-BOMdUVZx0J0sEdjP" target="_blank">https://figure.nz/chart/HptqJSFMhxoTV1C4-BOMdUVZx0J0sEdjP</a></p>
-          <p class="thin-padding">Ministry for Primary Industries. (2023). <i>Value of aquaculture exported from New Zealand</i>. <a href="https://figure.nz/chart/jPhn59ZSuhXHZh7v-t8qkRpOnOO0N0Ofo" target="_blank">https://figure.nz/chart/jPhn59ZSuhXHZh7v-t8qkRpOnOO0N0Ofo</a></p>
-          <p class="thin-padding">Ministry for Primary Industries. (2023). <i>Sustainable aquaculture | NZ Government</i>. <a href="https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/sustainable-aquaculture/" target="_blank">https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/sustainable-aquaculture/</a></p>
-          <p class="thin-padding">Ministry for Primary Industries. (2024). <i>Aquaculture (fish and shellfish farming) | NZ Government</i>. <a href="https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/" target="_blank">https://www.mpi.govt.nz/fishing-aquaculture/aquaculture-fish-and-shellfish-farming/</a></p>
-
-          <p class="thin-padding">RISD Nature Lab. (2021). <i>Mussel Shell (polished)</i> [3D Model]. Sketchfab. <a href="https://skfb.ly/onHOD" target="_blank">https://skfb.ly/onHOD</a></p>
+          <p class="thin-padding">Kozak, O. (2020). <i>Analysis of illustration influence on human-computer interaction</i> [Bachelor Thesis, Ukrainian Catholic University]. <a href="https://www.researchgate.net/publication/342438044_Analysis_of_illustration_influence_on_Human-Computer_Interaction" target="_blank">https://www.researchgate.net/publication/342438044_Analysis_of_illustration_influence_on_Human-Computer_Interaction</a></p>
+          <p class="thin-padding">Luo, Y., & Lin, Y. (2017). Effects of illustration types on the English reading performance of senior high school students with different cognitive styles. <i>English Language Teaching, 10</i>(9), 1-10 <a href="http://doi.org/10.5539/elt.v10n9p1" target="_blank">http://doi.org/10.5539/elt.v10n9p1</a></p>
+          <p class="thin-padding">Yang, H., Han, J., & Min, K. (2019). Distinguishing emotional responses to photographs and artwork using a deep learning-based approach. <i>Sensors (Basel, Switzerland), 19</i>(24), 5533. <a href="http://doi.org/10.5539/elt.v10n9p1" target="_blank">http://doi.org/10.5539/elt.v10n9p1</a></p>
 
         </div>
       </div>
