--- a/coral-rescue.html
+++ b/coral-rescue.html
@@ -211,7 +211,7 @@
       </div>
       <!-- intro finish -->
 
-      <video class="full-width" src="videos/cr-v-1.mkv" autoplay loop></video>
+      <video class="full-width" src="videos/cr-v-1.mkv" muted autoplay loop></video>
 
       <!-- images start -->
       <div class="full-width row-flex mid-padding">
@@ -263,7 +263,7 @@
       <!-- colour scenes start -->
       <div class="full-width row-flex mid-padding">
         <div class="half-width img-wrapper">
-          <video class="full-width rounded-img thick-top" src="videos/cr-v-2.mp4" loop autoplay></video>
+          <video class="full-width rounded-img thick-top" src="videos/cr-v-2.mp4" muted loop autoplay></video>
           <p class="mid-padding bigger-body">Desaturation of colour was utilised to communicate the negative consequences of coral reef decline.</p>
         </div>
         <div class="half-width">
@@ -300,7 +300,7 @@
             <img class="full-width rounded-img" src="images/coral-rescue/cr-8.svg" alt="">
           </div>
           <div class="half-width img-wrapper">
-            <video class="full-width rounded-img" src="videos/cr-v-3.mp4" loop autoplay></video>
+            <video class="full-width rounded-img" src="videos/cr-v-3.mp4" muted loop autoplay></video>
           </div>
         </div>
         <!-- row1 finish -->
@@ -308,7 +308,7 @@
         <!-- row2 start -->
         <div class="full-width row-flex small-top">
           <div class="img-wrapper three-fifth-width">
-            <video class="full-width rounded-img" src="videos/cr-v-4.mp4" loop autoplay></video>
+            <video class="full-width rounded-img" src="videos/cr-v-4.mp4" muted loop autoplay></video>
           </div>
           <div class="img-wrapper two-fifth-width">
             <img class="full-width rounded-img" src="images/coral-rescue/cr-9.svg" alt="">
@@ -319,10 +319,10 @@
         <!-- row3 start -->
         <div class="full-width row-flex small-top">
           <div class="half-width img-wrapper">
-            <video class="full-width rounded-img" src="videos/cr-v-5.mp4" loop autoplay></video>
+            <video class="full-width rounded-img" src="videos/cr-v-5.mp4" muted loop autoplay></video>
           </div>
           <div class="half-width img-wrapper">
-            <video class="full-width rounded-img" src="videos/cr-v-6.mp4" loop autoplay></video>
+            <video class="full-width rounded-img" src="videos/cr-v-6.mp4" muted loop autoplay></video>
           </div>
         </div>
         <!-- row3 finish -->
