--- a/nautiqua.html
+++ b/nautiqua.html
@@ -390,7 +390,7 @@
       </div>
       <!-- installationblurb finish -->
 
-      <video class="full-width" src="videos/installation-screen.mp4" autoplay loop></video>
+      <video class="full-width" src="videos/installation-screen.mp4" muted autoplay loop></video>
 
       <!-- references start -->
       <div class="full-width row-flex thick-padding">
