--- a/coral-rescue.html
+++ b/coral-rescue.html
@@ -341,7 +341,7 @@
         <div class="one-quarter-width thin-padding">
           <h3>References</h3>
         </div>
-        <div class="three-quarter-width citation">
+        <div class="three-quarter-width citation" style="overflow-x: hidden;">
           <p class="thin-padding">Kozak, O. (2020). <i>Analysis of illustration influence on human-computer interaction</i> [Bachelor Thesis, Ukrainian Catholic University]. <a href="https://www.researchgate.net/publication/342438044_Analysis_of_illustration_influence_on_Human-Computer_Interaction" target="_blank">https://www.researchgate.net/publication/342438044_Analysis_of_illustration_influence_on_Human-Computer_Interaction</a></p>
           <p class="thin-padding">Luo, Y., & Lin, Y. (2017). Effects of illustration types on the English reading performance of senior high school students with different cognitive styles. <i>English Language Teaching, 10</i>(9), 1-10 <a href="http://doi.org/10.5539/elt.v10n9p1" target="_blank">http://doi.org/10.5539/elt.v10n9p1</a></p>
           <p class="thin-padding">Yang, H., Han, J., & Min, K. (2019). Distinguishing emotional responses to photographs and artwork using a deep learning-based approach. <i>Sensors (Basel, Switzerland), 19</i>(24), 5533. <a href="http://doi.org/10.5539/elt.v10n9p1" target="_blank">http://doi.org/10.5539/elt.v10n9p1</a></p>
